Fix spacing in download link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,5 @@ Welcome to the official Hintbook!
 
 <p>
   Download Steve's Job
-  <a href="https://github.com/finnmito/steves-job/releases/latest">
-    here
-  </a>.
+  <a href="https://github.com/finnmito/steves-job/releases/latest">here</a>.
 </p>
